# asset_management

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  container.yml  docs.yml
docs/: Makefile
docs/source/: api.rst  conf.py  deployment.rst  index.rst  models.rst
k8s/: README.md  configmap.yaml  django.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secret.yaml  storage.yaml
src/: __init__.py
src/asset_management/: manage.py  settings.py  urls.py  wsgi.py
src/asset_management/api/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/asset_management/assets/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
src/asset_management/assets/migrations/: 0001_initial.py  0002_initial.py  0003_calibrationcertificate_corrective_actions_and_more.py  0004_measurementtype_sensortype_instrument_resolution_and_more.py
src/asset_management/core/: asgi.py
src/asset_management/templates/: base.html
src/asset_management/templates/assets/: calibration_list.html  (+5 more)
src/asset_management/users/: adapters.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tests/: conftest.py  settings.py
tests/integration/api/: test_health.py
tests/integration/assets/: test_calibration_certificates.py  test_calibration_records.py  test_models.py  test_reviews.py  test_sites.py
tests/unit/assets/: test_calibration_certificate.py  test_serializers.py
(+1 files in other folders)
